--- a/Fiorella/Fiorella/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Fiorella/Fiorella/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -208,6 +208,22 @@
                             </ul>
                         </div>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="collapse" href="#ui-slider" aria-expanded="false" aria-controls="ui-slider">
+                            <i class="mdi mdi-circle-outline menu-icon"></i>
+                            <span class="menu-title">Pages</span>
+                            <i class="menu-arrow"></i>
+                        </a>
+                        <div class="collapse" id="ui-slider">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Slider" asp-action="index">Slider List</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Slider" asp-action="create">Add Slider</a></li>
+
+                            </ul>
+                        </div>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="pages/forms/basic_elements.html">
                             <i class="mdi mdi-view-headline menu-icon"></i>
