--- a/Fiorella/Fiorella/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Fiorella/Fiorella/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@using Fiorella.Models.ViewModel
+@using Fiorella.Areas.Admin.ViewModel
 @using Fiorella.Models.Entity
