--- a/Fiorella/Fiorella/Views/Shared/Components/Header/Default.cshtml
+++ b/Fiorella/Fiorella/Views/Shared/Components/Header/Default.cshtml
@@ -1,5 +1,6 @@
 ﻿@model LayoutInfo
 <header>
+    <a asp-controller="Account" asp-action="Login"> Login</a>
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -140,6 +141,8 @@
                         <li class=""><a class="px-3" href="">Product Types 3</a></li>
                     </ul>
                 </ul>
+
+
             </ul>
         </div>
     </div>
