--- a/Fiorella/Fiorella/Views/Account/Login.cshtml
+++ b/Fiorella/Fiorella/Views/Account/Login.cshtml
@@ -26,47 +26,62 @@
 <body>
     <div class="container-scroller">
         <div class="container-fluid page-body-wrapper full-page-wrapper">
-            <div class="content-wrapper d-flex align-items-center auth px-0">
-                <div class="row w-100 mx-0">
-                    <div class="col-lg-4 mx-auto">
-                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+            <div class="content-wrapper d-flex align-items-stretch auth auth-img-bg">
+                <div class="row flex-grow">
+                    <div class="col-lg-6 d-flex align-items-center justify-content-center">
+                        <div class="auth-form-transparent text-left p-3">
                             <div class="brand-logo">
                                 <img src="~/Admin/images/logo.svg" alt="logo">
                             </div>
-                            <h4>Hello! let's get started</h4>
-                            <h6 class="font-weight-light">Sign in to continue.</h6>
+                            <h4>Welcome back!</h4>
+                            <h6 class="font-weight-light">Happy to see you again!</h6>
                             <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-                            <form class="pt-3" method="post">
+                            <form class="pt-3" method="post" asp-action="Login">
                                 <div class="form-group">
-                                    <input asp-for="Email"  class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
-                                    <label asp-for="Email"></label>
+                                    <label asp-for="Email">Insert email or username</label>
+                                    <div class="input-group">
+                                        <div class="input-group-prepend bg-transparent">
+                                            <span class="input-group-text bg-transparent border-right-0">
+                                                <i class="mdi mdi-account-outline text-primary"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="Email" class="form-control form-control-lg border-left-0" id="exampleInputEmail" placeholder="Email">
+                                        <span class="text-danger" asp-validation-for="Email"></span>
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <input asp-for="Password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
-                                    <label asp-for="Password"></label>
-                                </div>
-                                <div class="mt-3">
-                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit" asp-action="Login">SIGN IN</button>
+                                    <label asp-for="Password">Email</label>
+                                    <div class="input-group">
+                                        <div class="input-group-prepend bg-transparent">
+                                            <span class="input-group-text bg-transparent border-right-0">
+                                                <i class="mdi mdi-account-outline text-primary"></i>
+                                            </span>
+                                        </div>
+                                        <input asp-for="Password" class="form-control form-control-lg border-left-0" id="exampleInputEmail" placeholder="Password">
+                                        <span class="text-danger" asp-validation-for="Password"></span>
+                                    </div>
                                 </div>
                                 <div class="my-2 d-flex justify-content-between align-items-center">
                                     <div class="form-check">
                                         <label class="form-check-label text-muted">
-                                            <input type="checkbox" class="form-check-input">
+                                            <input asp-for="KeepSigned" class="form-check-input">
                                             Keep me signed in
                                         </label>
                                     </div>
                                     <a href="#" class="auth-link text-black">Forgot password?</a>
                                 </div>
-                                <div class="mb-2">
-                                    <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                                        <i class="mdi mdi-facebook me-2"></i>Connect using facebook
-                                    </button>
+                                <div class="my-3">
+                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit" asp-action="Login">LOGIN</button>
                                 </div>
+
                                 <div class="text-center mt-4 font-weight-light">
-                                    Don't have an account? <a href="register.html" class="text-primary">Create</a>
+                                    Don't have an account? <a href="register-2.html" class="text-primary">Create</a>
                                 </div>
                             </form>
                         </div>
+                    </div>
+                    <div class="col-lg-6 login-half-bg d-flex flex-row">
+                        <p class="text-white font-weight-medium text-center flex-grow align-self-end">Copyright &copy; 2020  All rights reserved.</p>
                     </div>
                 </div>
             </div>
