--- a/Fiorella/Fiorella/Views/Account/Register.cshtml
+++ b/Fiorella/Fiorella/Views/Account/Register.cshtml
@@ -26,72 +26,45 @@
 <body>
     <div class="container-scroller">
         <div class="container-fluid page-body-wrapper full-page-wrapper">
-            <div class="content-wrapper d-flex align-items-stretch auth auth-img-bg">
-                <div class="row flex-grow">
-                    <div class="col-lg-6 d-flex align-items-center justify-content-center">
-                        <div class="auth-form-transparent text-left p-3">
+            <div class="content-wrapper d-flex align-items-center auth px-0">
+                <div class="row w-100 mx-0">
+                    <div class="col-lg-4 mx-auto">
+                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
                             <div class="brand-logo">
                                 <img src="~/Admin/images/logo.svg" alt="logo">
                             </div>
                             <h4>New here?</h4>
-                            <h6 class="font-weight-light">Join us today! It takes only few steps</h6>
-                            <div class="text-danger" asp-validation-summary="All"></div>
-                            <form class="pt-3" method="post">
+                            <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
+                            <div asp-validation-summary="ModelOnly"></div>
+                            <form class="pt-3" method="post" asp-action="register"> 
                                 <div class="form-group">
-                                    <label asp-for="Username"></label>
-                                    <div class="input-group">
-                                        <div class="input-group-prepend bg-transparent">
-                                            <span class="input-group-text bg-transparent border-right-0">
-                                                <i class="mdi mdi-account-outline text-primary"></i>
-                                            </span>
-                                        </div>
-                                        <input asp-for="Username" class="form-control form-control-lg border-left-0" placeholder="Username">
-                                    </div>
+                                    <input asp-for="FullName"  class="form-control form-control-lg" id="exampleInputUsername1" placeholder="FullName">
+                                    <span asp-validation-for="FullName"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Email"></label>
-                                    <div class="input-group">
-                                        <div class="input-group-prepend bg-transparent">
-                                            <span class="input-group-text bg-transparent border-right-0">
-                                                <i class="mdi mdi-account-outline text-primary"></i>
-                                            </span>
-                                        </div>
-                                        <input asp-for="Email" class="form-control form-control-lg border-left-0" placeholder="Email">
-                                    </div>
+                                    <input asp-for="Email" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Email">
+                                    <span asp-validation-for="Email"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Password"></label>
-                                    <div class="input-group">
-                                        <div class="input-group-prepend bg-transparent">
-                                            <span class="input-group-text bg-transparent border-right-0">
-                                                <i class="mdi mdi-account-outline text-primary"></i>
-                                            </span>
-                                        </div>
-                                        <input asp-for="Password" class="form-control form-control-lg border-left-0" placeholder="Password">
-                                    </div>
+                                    <input asp-for="Username"  class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+                                    <span asp-validation-for="Username"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="ConfirmPassword"></label>
-                                    <div class="input-group">
-                                        <div class="input-group-prepend bg-transparent">
-                                            <span class="input-group-text bg-transparent border-right-0">
-                                                <i class="mdi mdi-account-outline text-primary"></i>
-                                            </span>
-                                        </div>
-                                        <input asp-for="ConfirmPassword" class="form-control form-control-lg border-left-0" placeholder="ConfirmPassword">
-                                    </div>
+                                    <input asp-for="Password" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Password">
+                                    <span asp-validation-for="Password"></span>
+                                </div>
+                                <div class="form-group">
+                                    <input asp-for="ConfirmPassword"  class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ConfirmPassword">
+                                    <span asp-validation-for="ConfirmPassword"></span>
                                 </div>
                                 <div class="mt-3">
-                                    <button type="submit" asp-action="Register" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" >SIGN UP</button>
+                                    <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">SIGN UP</button>
                                 </div>
                                 <div class="text-center mt-4 font-weight-light">
                                     Already have an account? <a href="login.html" class="text-primary">Login</a>
                                 </div>
                             </form>
                         </div>
-                    </div>
-                    <div class="col-lg-6 register-half-bg d-flex flex-row">
-                        <p class="text-white font-weight-medium text-center flex-grow align-self-end">Copyright &copy; 2020  All rights reserved.</p>
                     </div>
                 </div>
             </div>
