--- a/Fiorella/Fiorella/Areas/Admin/Views/Category/Index.cshtml
+++ b/Fiorella/Fiorella/Areas/Admin/Views/Category/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="content-wrapper">
     <div class="form-group">
-        <input class="form-control" id="categorySearch" placeholder="Search for category"/>
+        <input class="form-control" id="categorySearch" placeholder="Search for category" />
     </div>
     <div class="result">
 
@@ -35,9 +35,11 @@
                                         <td class="d-flex justify-content-around">
                                             <a class="btn btn-primary" asp-controller="Category" asp-action="detail" asp-route-id="@item.Id">Detail</a>
                                             <a class="btn btn-warning" asp-controller="Category" asp-action="update" asp-route-id="@item.Id">Update</a>
-                                            <form method="post" asp-action="delete" asp-route-id="@item.Id">
-                                                <button type="submit" class="btn btn-danger">Delete</button>
-                                            </form>
+                                            <a class="btn btn-warning" id="deleteCat" data-id="@item.Id" name="@item.Name.">Delete</a>
+
+                                            @*<form method="post" asp-action="delete" asp-route-id="@item.Id">
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </form>*@
                                         </td>
                                     </tr>
                                 }
@@ -51,24 +53,55 @@
     </div>
 </div>
 
+
 @section script {
     <partial name="_ValidatePartial" />
+     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <script>
-    
-    $(document).on("keyup", "#categorySearch", function () {
-        let searchFor = $(this).val();
-        $.ajax({
-            type:"GET",
-            url : "Category/Search?searchFor=" + searchFor,
-            success : function (res) {
-                $(".result").html("");
-                $(".result").append(res);
+<script>
 
-            }
+        $(document).on("keyup", "#categorySearch", function () {
+            let searchFor = $(this).val();
+            $.ajax({
+                type: "GET",
+                url: "Search?searchFor=" + searchFor,
+                
+                success: function (res) {
+                    $(".result").html("");
+                    $(".result").append(res);
+
+                }
+            })
         })
-    })
-    </script>
+
+        $(document).on("click", "#deleteCat", function (e) {
+           let _id = $(this).attr("data-id");
+
+            Swal.fire({
+                title: `Are you sure to delete ${$(this).attr("name")}?`,
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        type: "Get",
+                        url: "Delete",
+                        data: { id: _id },
+                        success: function (res) {
+                            Swal.fire(
+                                'Deleted!',
+                                `${res.message}`,
+                                'success'
+                            )
+                        }
+                    })
+
+                }
+            })
+
+        })
+</script>
 }
-
-
