--- a/Fiorella/Fiorella/Views/Shared/_Layout.cshtml
+++ b/Fiorella/Fiorella/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="~/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="~/owlcarousel/owl.theme.default.min.css">
+    <link href="~/lib/toastr.js/toastr.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/style.css">
     <title>Fiorello &#8211; A Flower Shop and Florist WooCommerce Theme</title>
 </head>
@@ -41,6 +42,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+    <script src="~/lib/toastr.js/toastr.min.js"></script>
     <script src="https://kit.fontawesome.com/e5e249fce2.js" crossorigin="anonymous"></script>
     <script src="~/owlcarousel/owl.carousel.min.js"></script>
     <script src="~/js/script.js"></script>
