--- a/Fiorella/Fiorella/Views/Shared/_ProductPartial.cshtml
+++ b/Fiorella/Fiorella/Views/Shared/_ProductPartial.cshtml
@@ -12,7 +12,7 @@
                 <h6>@item.Name</h6>
             </div>
             <div class="price">
-                <span class="text-black-50" class="addToCard" data-id="@item.Id">Add to cart</span>
+                <span class="text-black-50 addToCard" data-id="@item.Id">Add to cart</span>
                 <span class="text-black-50">$@item.Price</span>
             </div>
         </div>
