--- a/Fiorella/Fiorella/Views/Home/Index.cshtml
+++ b/Fiorella/Fiorella/Views/Home/Index.cshtml
@@ -11,17 +11,16 @@
 
     <section id="slider">
         <div class="owl-carousel slider">
-             @foreach (var item in Model.SliderImage)
+            @foreach (var item in Model.SliderImage)
             {
-                <div> <img src="~/img/@item.Image" alt=""> </div>
-            }
-          
+<div> <img src="~/img/@item.Image" alt=""> </div>}
+
         </div>
         <div class="container context pl-lg-5 ml-lg-3">
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text">
-                       @Html.Raw(Model.Slider.Title)
+                        @Html.Raw(Model.Slider.Title)
                         <p class="text-black-50 d-none d-sm-block">
                             @Model.Slider.Desc
                         </p>
@@ -60,8 +59,8 @@
                         <li><a href="" data-id="all">All</a></li>
                         @foreach (var item in Model.Categories)
                         {
-                            <li><a href="" data-id="@item.Name.ToLower()">@item.Name</a></li>
-                        }
+            <li><a href="" data-id="@item.Name.ToLower()">@item.Name</a></li>
+}
                     </ul>
                     <ul class="list-unstyled">
                         <li>
@@ -73,7 +72,7 @@
             </div>
             <div class="row">
                 @* <partial name="_ProductPartial" model="Model.Products"/>*@
-                @await Component.InvokeAsync("Product") 
+                @await Component.InvokeAsync("Product")
             </div>
 
             <div class="d-flex justify-content-center">
@@ -98,18 +97,18 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-text mt-5 mt-lg-0 px-lg-5">
-                       @Html.Raw(Model.About.Title)
+                        @Html.Raw(Model.About.Title)
                         <p class="py-3">
                             @Model.About.Desc
                         </p>
                         <ul class="list-unstyled">
                             @foreach (var item in @Model.AboutDetails)
-                           {
-                               <li class="mt-3">
-                                <img src="~/img/@Model.About.Icon" class="mr-2" alt=""> @item.Name
-                            </li>
-                           }
-                          
+                            {
+                <li class="mt-3">
+                    <img src="~/img/@Model.About.Icon" class="mr-2" alt=""> @item.Name
+                </li>
+}
+
                         </ul>
                     </div>
                 </div>
@@ -137,18 +136,17 @@
             <div class="row pb-5">
                 @foreach (var item in Model.Experts)
                 {
-                    <div class="col-md-6 col-lg-3">
-                        <div class="item text-center">
-                            <div class="img">
-                                <img src="~/img/@item.Image" class="img-fluid rounded-circle" alt="">
-                            </div>
-                            <div class="text mt-3">
-                                <h6>@item.Name @item.Surname </h6>
-                                <p class="text-black-50">@item.Position</p>
-                            </div>
-                        </div>
-                    </div>
-                }
+    <div class="col-md-6 col-lg-3">
+        <div class="item text-center">
+            <div class="img">
+                <img src="~/img/@item.Image" class="img-fluid rounded-circle" alt="">
+            </div>
+            <div class="text mt-3">
+                <h6>@item.Name @item.Surname </h6>
+                <p class="text-black-50">@item.Position</p>
+            </div>
+        </div>
+    </div>}
 
                 <div class="col-lg-3"></div>
                 <div class="col-lg-3"></div>
@@ -160,21 +158,9 @@
     <!-- EXPERTS END -->
     <!-- SUBSCRIBE START -->
 
-    <section id="subscribe" style="background-image:url('@Url.Content("~/img/"+ Model.ContactSection.Image)')">
-        <div class="container py-5">
-            <div class="row py-5">
-                <div class="col-12">
-                    <div class="content text-center py-5">
-                        <h3>@Model.ContactSection.Title</h3>
-                        <div class="form-group d-flex justify-content-center flex-wrap mt-5">
-                            <input type="email" placeholder="Email Address" class="form-control-lg rounded-0">
-                            <button class="btn btn-danger btn-lg rounded-0 px-5 mt-3 mt-sm-0">Subscribe</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    @await Component.InvokeAsync("Subscribe")
+
+
 
     <!-- SUBSCRIBE END -->
     <!-- BLOG START -->
@@ -194,7 +180,7 @@
                 </div>
             </div>
             <div class="row pb-5">
-               @await Component.InvokeAsync("Blog") 
+                @await Component.InvokeAsync("Blog")
             </div>
         </div>
     </section>
@@ -208,26 +194,25 @@
                 <div class="col-md-8 col-xl-6">
                     <div class="owl-carousel say">
                         @foreach (var item in Model.MiniSliders)
-                       {
-                           <div>
-                            <div class="item text-center">
-                                <div class="img d-flex justify-content-center">
-                                    <img src="~/img/@item.Expert.Image" alt="">
-                                </div>
-                                <div class="text text-muted pt-3 pb-5">
-                                    <i>
-                                       @item.Title
-                                    </i>
-                                </div>
-                                <div class="author">
-                                    <h6>@item.Expert.Name @item.Expert.Surname</h6>
-                                    <p class="text-black-50">@item.Expert.Position</p>
-                                </div>
-                            </div>
-                        </div>
-                       }
-                        
-                    
+                        {
+            <div>
+                <div class="item text-center">
+                    <div class="img d-flex justify-content-center">
+                        <img src="~/img/@item.Expert.Image" alt="">
+                    </div>
+                    <div class="text text-muted pt-3 pb-5">
+                        <i>
+                            @item.Title
+                        </i>
+                    </div>
+                    <div class="author">
+                        <h6>@item.Expert.Name @item.Expert.Surname</h6>
+                        <p class="text-black-50">@item.Expert.Position</p>
+                    </div>
+                </div>
+            </div>}
+
+
                     </div>
                 </div>
             </div>
@@ -240,10 +225,9 @@
     <section id="instagram">
         <div class="owl-carousel instagram">
             @foreach (var item in Model.InstaSlides)
-           {
-               <div><img src="~/img/@item.Image" class="img-fluid" alt=""></div>
-           }
-            
+            {
+<div><img src="~/img/@item.Image" class="img-fluid" alt=""></div>}
+
         </div>
         <div class="hastag bg-light text-muted py-2 px-3">
             #FIORELLO
