--- a/Fiorella/Fiorella/Areas/Admin/Views/User/Index.cshtml
+++ b/Fiorella/Fiorella/Areas/Admin/Views/User/Index.cshtml
@@ -37,8 +37,10 @@
                                         <td>@item.Email</td>
                                         <td>@item.Role</td>
                                         <td class="d-flex justify-content-around">
-                                            <a class="btn btn-primary" asp-controller="User" asp-action="AddRole" asp-route-id="@item.Id">Choose role</a>
-                                         
+                                            <form class="d-flex justify-content-around" asp-action="ChangeRole">
+                                                <select name="role" class="form-control" asp-items=ViewBag.Roles></select>
+                                                <button id="" class="btn btn-behance chooseRole" data-id="@item.Id">Change</button>
+                                            </form>
                                             <a class="btn btn-primary" asp-controller="User" asp-action="ChangePassword" asp-route-id="@item.Id">Change password</a>
                                             <a class="btn btn-primary" asp-controller="User" asp-action="detail" asp-route-id="@item.Id">Deactivate</a>
 
@@ -57,7 +59,24 @@
 
 
 @section script{
+    <partial name="_ValidatePartial" />
+    <script>
 
+        $(document).on("submit", "form", function (e) {
+            e.preventDefault();
+            let formData = new FormData(e.currentTarget);
+            let role = formData.get("role");
+            let id = $(".chooseRole").attr("data-id");
+            $.ajax({
+                type: "POST",
+                url: "User/ChangeRole/" + id + "?role=" + role,
 
+                success: function (res) {
+                    console.log(res);
+                },
+                error: function (err, status) { console.log(err); }
+            })
+        });
+    </script>
 
- }
+}
