--- a/Fiorella/Fiorella/Areas/Admin/Views/Layout/Index.cshtml
+++ b/Fiorella/Fiorella/Areas/Admin/Views/Layout/Index.cshtml
@@ -26,7 +26,7 @@
                                     <td>@item.Id</td>
                                     <td>@item.LinkedId</td>
                                     <td>@item.Facebook</td>
-                                    <td>@item.Logo</td>
+                                    <td><img src="~/img/@item.Logo"/></td>
 
                                     <td class="d-flex justify-content-around">
                                         <a class="btn btn-primary" asp-controller="Layout" asp-action="Detail" asp-route-id="@item.Id">Detail</a>
